criacao app hardware

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <div class="sidebar">
       <ul class="menu">
         <li><a href="#">Home</a></li>
+        <li><a href="/hardware">Hardware</a></li>
+
       </ul>
       <a href="{% url 'account_logout' %}">Sair</a>
     </div>
