--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
       <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="/hardware">Hardware</a></li>
+        <li><a href="/software">Software</a></li>
+
 
       </ul>
       <a href="{% url 'account_logout' %}">Sair</a>
