app internet criado

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="/hardware">Hardware</a></li>
         <li><a href="/software">Software</a></li>
+        <li><a href="/internet">internet</a></li>
 
 
       </ul>
