app log criado e algumas correcoes

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
         <li><a href="/hardware">Hardware</a></li>
         <li><a href="/software">Software</a></li>
         <li><a href="/internet">internet</a></li>
+          <li><a href="/log">log</a></li>
+
 
 
       </ul>
